exports[`Input renders correctly 1`] = `
<input
  className="" />
`;

exports[`Input renders correctly 10`] = `
<input
  className="uk-form-width-medium" />
`;

exports[`Input renders correctly 11`] = `
<input
  className="uk-form-width-small" />
`;

exports[`Input renders correctly 12`] = `
<input
  className="uk-form-width-mini" />
`;

exports[`Input renders correctly 2`] = `
<input
  className="uk-search-field"
  type="search" />
`;

exports[`Input renders correctly 3`] = `
<input
  className="uk-form-danger" />
`;

exports[`Input renders correctly 4`] = `
<input
  className="uk-form-success" />
`;

exports[`Input renders correctly 5`] = `
<input
  className="uk-form-blank" />
`;

exports[`Input renders correctly 6`] = `
<input
  className="uk-form-large" />
`;

exports[`Input renders correctly 7`] = `
<input
  className="uk-form-small" />
`;

exports[`Input renders correctly 8`] = `
<input
  className="uk-width-1-1" />
`;

exports[`Input renders correctly 9`] = `
<input
  className="uk-form-width-large" />
`;
